--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,19 @@
 --- 
+title: "Supervised Machine Learning for Text Analysis in R"
+author: "Emil Hvitfeldt and Julia Silge"
+date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: krantz
+biblio-style: apalike
+link-citations: yes
+links-as-notes: true
+colorlinks: true
+lot: false
+lof: false
+monofont: "Source Code Pro"
+monofontoptions: "Scale=0.7"
+github-repo: EmilHvitfeldt/smltar
+description: "Supervised Machine Learning for Text Analysis in R"
 graphics: yes
 ---
 
