Specify which conda env to use

--- a/01_placeholder.Rmd
+++ b/01_placeholder.Rmd
@@ -34,6 +34,9 @@ spacy_parse(txt)
 
 
 ```{r}
+library(reticulate)
+use_condaenv("r-reticulate")
+
 library(keras)
 
 dense_model <- keras_model_sequential() %>%
