--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -1,6 +1,14 @@
 \usepackage{booktabs}
 \usepackage{longtable}
 \usepackage[bf,singlelinecheck=off]{caption}
+\usepackage{enumitem}
+\usepackage{makeidx}
+\makeindex
+
+\setlist[1]{itemsep=10pt}
+
+\usepackage{fontspec} % use fontspec package
+\usepackage{xeCJK}    % use xeCJK package
 
 \usepackage{framed,color}
 \definecolor{shadecolor}{RGB}{248,248,248}
@@ -39,12 +47,14 @@
 % create callout boxes:
 \newenvironment{rmdblock}[1]
   {\begin{shaded*}
-  \begin{itemize}
+   %\addtolength{\leftmargini}{-1cm}
+  \begin{itemize}[left = -1cm, labelsep = 1cm]
   \renewcommand{\labelitemi}{
     \raisebox{-.7\height}[0pt][0pt]{
       {\setkeys{Gin}{width=3em,keepaspectratio}\includegraphics{images/#1}}
     }
   }
+ 
   \item
   }
   {
@@ -63,6 +73,12 @@
 \newenvironment{rmdwarning}
   {\begin{rmdblock}{warning}}
   {\end{rmdblock}}
+\newenvironment{rmdpackage}
+  {\begin{rmdblock}{package}}
+  {\end{rmdblock}}
+  
+\usepackage{footnote}
+\makesavenoteenv{rmdblock}
 
 \usepackage{makeidx}
 \makeindex
